chore: bumped Spring AI to 2.0.0 and SpringBoot to 4.1.0